templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: registry
  name: registry
  namespace: spike
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: registry
status:
  loadBalancer: {}
