templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: registry
  namespace: spike
spec:
  rules:
  - host: registry.test
    http:
      paths:
      - backend:
          service:
            name: registry
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
